// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babel returns for development 1`] = `
Object {
  "es5": Object {
    "devtool": "cheap-module-eval-source-map",
    "entry": Array [
      "webpack-hot-middleware/client",
      "/Users/luisherranz/Code/frontity/packages/core/src/client",
    ],
    "mode": "development",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "es5-development",
              ],
            },
          },
        },
      ],
    },
    "name": "client",
    "output": Object {
      "chunkFilename": "[name].es5.js",
      "filename": "main.es5.js",
      "path": "/Users/luisherranz/Code/frontity/packages/core/build/static",
    },
    "plugins": Array [
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "loadable-stats.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "info",
            "warn",
            "error",
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "info",
          "openAnalyzer": false,
          "reportFilename": "../../build/analyze/es5-development.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
      HotModuleReplacementPlugin {
        "fullBuildTimeout": 200,
        "multiStep": undefined,
        "options": Object {},
        "requestTimeout": 10000,
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "module": Object {
    "devtool": "cheap-module-eval-source-map",
    "entry": Array [
      "webpack-hot-middleware/client",
      "/Users/luisherranz/Code/frontity/packages/core/src/client",
    ],
    "mode": "development",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "module-development",
              ],
            },
          },
        },
      ],
    },
    "name": "client",
    "output": Object {
      "chunkFilename": "[name].module.js",
      "filename": "main.module.js",
      "path": "/Users/luisherranz/Code/frontity/packages/core/build/static",
    },
    "plugins": Array [
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "loadable-stats.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "info",
            "warn",
            "error",
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "info",
          "openAnalyzer": false,
          "reportFilename": "../../build/analyze/module-development.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
      HotModuleReplacementPlugin {
        "fullBuildTimeout": 200,
        "multiStep": undefined,
        "options": Object {},
        "requestTimeout": 10000,
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "node": Object {
    "devtool": "cheap-module-eval-source-map",
    "entry": Array [
      "/Users/luisherranz/Code/frontity/packages/core/src/server",
    ],
    "mode": "development",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "node-development",
              ],
            },
          },
        },
      ],
    },
    "name": "server",
    "output": Object {
      "filename": "main.node.js",
      "libraryTarget": "commonjs2",
      "path": "/Users/luisherranz/Code/frontity/packages/core/build/dynamic",
    },
    "plugins": Array [
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "loadable-stats.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "info",
            "warn",
            "error",
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "info",
          "openAnalyzer": false,
          "reportFilename": "../../build/analyze/node-development.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
      LimitChunkCountPlugin {
        "options": Object {
          "maxChunks": 1,
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "node",
  },
}
`;

exports[`Babel returns for production 1`] = `
Object {
  "es5": Object {
    "devtool": false,
    "entry": Array [
      "/Users/luisherranz/Code/frontity/packages/core/src/client",
    ],
    "mode": "production",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "es5-production",
              ],
            },
          },
        },
      ],
    },
    "name": "client",
    "output": Object {
      "chunkFilename": "[name].es5.[chunkhash].js",
      "filename": "main.es5.[chunkhash].js",
      "path": "/Users/luisherranz/Code/frontity/packages/core/build/static",
    },
    "plugins": Array [
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "loadable-stats.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "info",
            "warn",
            "error",
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "info",
          "openAnalyzer": false,
          "reportFilename": "../../build/analyze/es5-production.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "module": Object {
    "devtool": false,
    "entry": Array [
      "/Users/luisherranz/Code/frontity/packages/core/src/client",
    ],
    "mode": "production",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "module-production",
              ],
            },
          },
        },
      ],
    },
    "name": "client",
    "output": Object {
      "chunkFilename": "[name].module.[chunkhash].js",
      "filename": "main.module.[chunkhash].js",
      "path": "/Users/luisherranz/Code/frontity/packages/core/build/static",
    },
    "plugins": Array [
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "loadable-stats.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "info",
            "warn",
            "error",
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "info",
          "openAnalyzer": false,
          "reportFilename": "../../build/analyze/module-production.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "node": Object {
    "devtool": false,
    "entry": Array [
      "/Users/luisherranz/Code/frontity/packages/core/src/server",
    ],
    "mode": "production",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "node-production",
              ],
            },
          },
        },
      ],
    },
    "name": "server",
    "output": Object {
      "filename": "main.node.js",
      "libraryTarget": "commonjs2",
      "path": "/Users/luisherranz/Code/frontity/packages/core/build/dynamic",
    },
    "plugins": Array [
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "loadable-stats.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "info",
            "warn",
            "error",
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "info",
          "openAnalyzer": false,
          "reportFilename": "../../build/analyze/node-production.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
      LimitChunkCountPlugin {
        "options": Object {
          "maxChunks": 1,
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "node",
  },
}
`;
